package model;

public class ServicioDeGeolocalizacion {
    public void solicitarCoordenadas() {}
    public void devolverCoordenadas(double lat, double lng) {}
    public void errorServiciosDesactivados() {}
    public void errorPermisosDenegados() {}
}
